--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "framer-motion": "^12.23.12",
     "kysely": "^0.28.7",
     "next": "15.4.6",
-    "next-auth": "5.0.0-beta.29",
+    "next-auth": "^4.24.11",
     "next-intl": "^4.3.9",
     "next-sitemap": "^4.2.3",
     "pg": "^8.16.3",
