베러어스 삭제 넥스트 어스로 변경

--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/pg": "^8.15.5",
     "bcryptjs": "^3.0.2",
-    "better-auth": "^1.3.23",
     "chalk-ts": "^1.0.0",
     "drizzle-kit": "^0.31.5",
     "drizzle-orm": "^0.44.5",
     "framer-motion": "^12.23.12",
     "kysely": "^0.28.7",
     "next": "15.4.6",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.29",
     "next-intl": "^4.3.9",
     "next-sitemap": "^4.2.3",
     "pg": "^8.16.3",
