--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/firebase-adapter": "^2.10.0",
     "@headlessui/react": "^2.2.7",
     "@neondatabase/serverless": "^1.0.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@stripe/stripe-js": "^7.8.0",
+    "@tosspayments/payment-widget-sdk": "^0.12.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/pg": "^8.15.5",
     "bcryptjs": "^3.0.2",
@@ -34,7 +34,6 @@
     "postgres": "^3.4.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
