--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@stripe/stripe-js": "^7.8.0",
     "@tosspayments/payment-widget-sdk": "^0.12.0",
     "@types/bcryptjs": "^3.0.0",
+    "@types/node": "^20.0.0",
     "@types/pg": "^8.15.5",
+    "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "chalk-ts": "^1.0.0",
     "drizzle-kit": "^0.31.5",
@@ -31,6 +33,7 @@
     "next-intl": "^4.3.9",
     "next-sitemap": "^4.2.3",
     "pg": "^8.16.3",
+    "postcss": "^8.5.6",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -41,13 +44,11 @@
     "redux-persist": "^6.0.0",
     "server-only": "^0.0.1",
     "stripe": "^18.4.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.36.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.0",
     "typescript": "^5.9.2"
   }
 }
