--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "eslint": "^9.36.0",
     "typescript": "^5.9.2"
   }
