--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && open-next build",
     "start": "next start",
     "lint": "next lint",
     "postbuild": "next-sitemap",
@@ -48,8 +48,8 @@
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.16",
     "eslint": "^9.36.0",
+    "open-next": "^3.1.1",
     "typescript": "^5.9.2"
   }
 }
