--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,7 @@ name = "getkkul-shopping"
 compatibility_date = "2024-08-20"
 
 # Pages 설정 - 루트 레벨에 위치해야 함
-pages_build_output_dir = ".next"
+pages_build_output_dir = ".open-next/dist"
 
 # 환경 변수 (실제 값은 Cloudflare 대시보드에서 설정)
 [vars]
