--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && open-next build",
+    "build": "next build && npx open-next@latest build",
     "start": "next start",
     "lint": "next lint",
     "postbuild": "next-sitemap",
