Revert to standalone build - static export breaks API routes

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "postbuild": "next-sitemap",
     "deploy:check": "./deploy-check.sh",
-    "deploy:cf": "wrangler pages deploy out --project-name=getkkul-commerce --compatibility-date=2024-08-20",
+    "deploy:cf": "wrangler pages deploy .next --project-name=getkkul-commerce --compatibility-date=2024-08-20",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
