--- a/.cfignore
+++ b/.cfignore
@@ -1,11 +1,12 @@
 # Cloudflare Pages ignore file
 # 큰 파일들과 불필요한 파일들 제외
 
-# Webpack 캐시 (매우 큼)
+# Webpack 캐시 (매우 큼 - 가장 중요)
 .next/cache/
 cache/
 **/cache/**
 **/*.pack
+.next/cache/webpack/
 
 # 개발 파일들
 node_modules/
@@ -13,10 +14,11 @@ node_modules/
 .env*
 *.log
 
-# 빌드 아티팩트
+# 빌드 아티팩트 (큰 파일들)
 .next/standalone/
 .next/static/chunks/webpack/
 .open-next/
+.next/trace
 
 # IDE 파일들
 .vscode/
@@ -28,3 +30,9 @@ node_modules/
 *.zip
 *.tar.gz
 *.tgz
+*.map
+
+# Next.js 특정 큰 파일들
+.next/server/chunks/
+.next/server/pages/
+.next/static/chunks/pages/
