--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap",
+    "postbuild": "next-sitemap && cp -f _worker.js out/_worker.js",
     "deploy:check": "./deploy-check.sh",
     "deploy:cf": "wrangler pages deploy .next --project-name=getkkul-commerce --compatibility-date=2024-08-20",
     "type-check": "tsc --noEmit"
