--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export && next-sitemap && cp -f _worker.js out/_worker.js",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap && cp -f _worker.js out/_worker.js",
+
     "deploy:check": "./deploy-check.sh",
     "deploy:cf": "wrangler pages deploy .next --project-name=getkkul-commerce --compatibility-date=2024-08-20",
     "type-check": "tsc --noEmit"
